force-app/main/default/objects/Site_Survey_Response__c/Site_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Site Survey Response</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>