force-app/main/default/objects/Site_Survey_Response__c/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site Survey Question</label>
    <referenceTo>Site_Survey_Question__c</referenceTo>
    <relationshipLabel>Site Survey Responses</relationshipLabel>
    <relationshipName>Site_Survey_Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>