force-app/main/default/objects/Site_Survey_Response__c/fields/Question_Label__c.field-meta.xml
<CustomField>
    <fullName>Question_Label__c</fullName>
    <formula>question__r.Question__c</formula>
    <label>Question Label</label>
    <type>Text</type>
</CustomField>