force-app/main/default/objects/Site_Survey_Response__c/fields/response__c.field-meta.xml
<CustomField>
    <fullName>response__c</fullName>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>