force-app/main/default/objects/Site_Survey_Response__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Site Survey Responses</relationshipLabel>
    <relationshipName>Site_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>