force-app/main/default/objects/Site_Survey_Response__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Site Survey Responses</relationshipLabel>
    <relationshipName>Site_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>