force-app/main/default/objects/Site_Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Label__c</columns>
    <columns>response__c</columns>
    <columns>Service_Appointment__c</columns>
    <columns>question__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>